objects/sbaa__ApprovalRule__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sbaa__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalChain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval chain to which this rule belongs.</description>
        <inlineHelpText>Approval chain to which this rule belongs.</inlineHelpText>
        <label>Approval Chain</label>
        <referenceTo>sbaa__ApprovalChain__c</referenceTo>
        <relationshipLabel>Approval Rules</relationshipLabel>
        <relationshipName>ApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalStep__c</fullName>
        <label>Approval Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovalTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Approved Approval Rules</relationshipLabel>
        <relationshipName>ApprovedApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedValueField__c</fullName>
        <description>Specifies the field on record that sources approved value in Approval records.</description>
        <label>Approved Value Field</label>
        <picklist>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__ApprovedValueOperator__c</fullName>
        <description>Operator used to compare current approved value to approved value stored in the Approval record to determine if approval is necessary.</description>
        <label>Approved Value Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ends with</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__ApproverField__c</fullName>
        <label>Approver Field</label>
        <picklist>
            <picklistValues>
                <fullName>Created By</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RVP_Approver_ID__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD_Approver_ID__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>sbaa__Approver__c</referenceTo>
        <relationshipLabel>Approval Rules</relationshipLabel>
        <relationshipName>ApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__ConditionsMet__c</fullName>
        <label>Conditions Met</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Any</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__OverrideField__c</fullName>
        <label>Override Field</label>
        <picklist>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sbaa__Parallel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parallel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sbaa__RecallTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recall Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Recalled Approval Rules</relationshipLabel>
        <relationshipName>RecalledApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RejectionTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rejection Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Rejected Approval Rules</relationshipLabel>
        <relationshipName>RejectedApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__RequestTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Template</label>
        <referenceTo>sbaa__EmailTemplate__c</referenceTo>
        <relationshipLabel>Approval Rules (Requested)</relationshipLabel>
        <relationshipName>RequestedApprovalRules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sbaa__TargetObject__c</fullName>
        <label>Target Object</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBQQ__Quote__c</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Approval Rule</label>
    <listViews>
        <fullName>sbaa__ActiveRules</fullName>
        <columns>NAME</columns>
        <columns>sbaa__ApprovalStep__c</columns>
        <columns>sbaa__Approver__c</columns>
        <columns>sbaa__ApproverField__c</columns>
        <columns>sbaa__ConditionsMet__c</columns>
        <columns>sbaa__Parallel__c</columns>
        <columns>sbaa__ApprovalChain__c</columns>
        <columns>sbaa__RequestTemplate__c</columns>
        <columns>sbaa__ApprovalTemplate__c</columns>
        <columns>sbaa__RejectionTemplate__c</columns>
        <columns>sbaa__RecallTemplate__c</columns>
        <columns>sbaa__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sbaa__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Rules</label>
    </listViews>
    <listViews>
        <fullName>sbaa__All</fullName>
        <columns>NAME</columns>
        <columns>sbaa__ApprovalStep__c</columns>
        <columns>sbaa__TargetObject__c</columns>
        <columns>sbaa__ConditionsMet__c</columns>
        <columns>sbaa__Parallel__c</columns>
        <columns>sbaa__ApprovalChain__c</columns>
        <columns>sbaa__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>